# Reed-Solomon

./: .gitignore  CMakeLists.txt
include/: timer.h
parallelization/: CMakeLists.txt  baseline.cpp  collect.py  mpi.cpp  no_corrupt.cpp  omp.cpp
tests/: CMakeLists.txt  performancetest.cpp
